--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body{
     --color-navy-blue-modal:#2E2F4266;
     --color-grey:#2E2F42B2;
     --color-white:#FFFFFF;
-    --color-dairy:#2E2F4266;
+    --color-dairy:#FCFCFC;
 }
 
 .list{
@@ -35,6 +35,7 @@ body{
     justify-content: center;
     
 }
+
 
 .link{
     text-decoration: none;
@@ -58,6 +59,9 @@ color: var(--color-iris);
 .logo-studio{
 color: var(--color-navy-blue);
 }
+
+
+
 .footer-studio{
     color: var(--color-cloud);
 }
@@ -68,17 +72,39 @@ color: var(--color-navy-blue);
 
 
 
+.studio-after-child{
+    border-bottom: 4px solid var(--color-ocean);
+    border-radius: 2px;
+    color: var(--color-ocean);
+    padding-bottom: 20px;
+}
+
+
+.portfolio-after-child{
+    border-bottom: 4px solid var(--color-ocean);
+        border-radius: 2px;
+        color: var(--color-ocean);
+        padding-bottom: 20px;
+}
+
+
+
+
 .list-nav{
 color: var(--color-navy-blue);
 font-weight: 500;
 padding: 24px 0;
-
+transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
+
+
 .list-nav:hover,
 .list-nav:focus{
-    color: var(--color-ocean);
+    color: var(--color-ocean); 
 }
 
 .address{
@@ -87,6 +113,9 @@ padding: 24px 0;
 
 .address-link{
     color: var(--color-slate);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -145,6 +174,10 @@ padding: 24px 0;
     border: none;
     margin-top: 48px;
     margin-left: 496px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .main-button:hover,
@@ -323,6 +356,9 @@ padding: 120px 0;
     height: 40px;
     border-radius: 50%;
     background-color: var(--color-iris);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-footer{
@@ -333,6 +369,9 @@ padding: 120px 0;
     height: 40px;
     border-radius: 50%;
     background-color: var(--color-iris);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-footer:hover,
@@ -381,6 +420,9 @@ height: 88px;
 border-radius: 4px;
 color: var(--color-light-slate);
 border: 1px solid var(--LIGHT-SLATE, #8E8F99); 
+transition-property: color, border;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -449,6 +491,9 @@ margin-right: 120px;
     padding: 12px 24px;
     border-radius: 4px;
     border: 1px solid var(--color-cornflower);
+    transition-property: background-color,color,border,box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -505,6 +550,8 @@ gap: 40px;
     padding: 24px 0;
 }
 
+
+
 .image-class{
     display: block;
     max-width: 100%;
@@ -514,6 +561,9 @@ gap: 40px;
 
 .image-class-link{
     display: block;
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-class-link:hover,
 .image-class-link:focus{
@@ -542,3 +592,80 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     border-top: none;
 }
 
+.image-wrapper{
+    position: relative;
+    overflow: hidden;
+}
+
+.figaption-text{
+    color: var(--color-cloud);
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+   
+}
+
+.image-wrapper figcaption{
+    
+    position: absolute;
+    inset: 0;
+    background-color: var(--color-iris);
+    opacity: 0;
+    translate: 0 100%;
+    transition-property: translate, opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.image-wrapper:hover figcaption{
+translate: 0;
+opacity: 1;
+}
+
+.modal-window{
+    position: fixed;
+    inset: 0 0 auto;
+    min-height: 100vh;
+    padding: 80px 13px 516px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    pointer-events: all;
+    transition-property: opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    background: var(--color-navy-blue-modal, rgba(46, 47, 66, 0.40));
+    
+    
+}
+
+.modal-window.is-hidden{
+opacity: 0;
+pointer-events: none;
+
+}
+
+.modal-body{
+    display: flex;
+    justify-content: right;
+    background-color: var(--color-dairy);
+    width: 408px;
+    height: 584px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);   
+}
+
+.icon-close{
+    fill: var(--color-navy-blue);
+}
+
+.button-close-modal{
+display: flex;
+justify-content: center;
+align-items: center;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+
+}
