--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ body{
 
 
 .link{
+    
     text-decoration: none;
     display: inline-block;
     
@@ -72,25 +73,27 @@ color: var(--color-navy-blue);
 
 
 
-.studio-after-child{
-    border-bottom: 4px solid var(--color-ocean);
-    border-radius: 2px;
+.child{
+    position: relative;
     color: var(--color-ocean);
-    padding-bottom: 20px;
+    
 }
 
-
-.portfolio-after-child{
-    border-bottom: 4px solid var(--color-ocean);
-        border-radius: 2px;
-        color: var(--color-ocean);
-        padding-bottom: 20px;
+.child::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: var(--color-ocean);
+    border-radius: 2px;
 }
 
 
 
 
 .list-nav{
+position: relative;
 color: var(--color-navy-blue);
 font-weight: 500;
 padding: 24px 0;
