--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ color: var(--color-navy-blue);
 
 .child{
     position: relative;
+    border-bottom: 4px solid var(--color-ocean);
     color: var(--color-ocean);
     font-weight: 500;
     padding: 24px 0;
