--- a/css/styles.css
+++ b/css/styles.css
@@ -634,15 +634,16 @@ opacity: 1;
 
 .modal-window{
     position: fixed;
-    inset: 0 0 auto;
-    min-height: 100vh;
-    padding: 80px 13px 516px ;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 1;
     pointer-events: all;
-    transition-property: opacity;
+    transition-property: opacity, visibility;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     background: var(--color-navy-blue-modal, rgba(46, 47, 66, 0.40));
@@ -652,6 +653,7 @@ opacity: 1;
 
 .modal-window.is-hidden{
 opacity: 0;
+visibility: hidden;
 pointer-events: none;
 
 }
