--- a/css/styles.css
+++ b/css/styles.css
@@ -659,11 +659,15 @@ pointer-events: none;
 }
 
 .modal-body{
+    position: absolute;
     display: flex;
     justify-content: right;
     background-color: var(--color-dairy);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(1);
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     border-radius: 4px;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);   
 }
