--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,9 @@ pointer-events: none;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%) scale(1);
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
