--- a/css/styles.css
+++ b/css/styles.css
@@ -680,11 +680,27 @@ pointer-events: none;
 }
 
 .button-close-modal{
+position: absolute;
 display: flex;
 justify-content: center;
 align-items: center;
+top:24px;
+right: 24px;
 width: 24px;
 height: 24px;
 border-radius: 50%;
-
+background-color: var(--color-cornflower);
+border: 1px solid rgba(0, 0, 0, 0.10);
+cursor: pointer;
 }
+
+.button-close-modal:hover,
+.button-close-modal:focus{
+    background-color: var(--color-ocean);
+}
+
+.icon-close:hover,
+.icon-close:focus{
+    fill: var(--color-white);
+}
+
