--- a/css/styles.css
+++ b/css/styles.css
@@ -677,6 +677,9 @@ pointer-events: none;
 
 .icon-close{
     fill: var(--color-navy-blue);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-close-modal{
