--- a/css/styles.css
+++ b/css/styles.css
@@ -697,7 +697,7 @@ border: 1px solid rgba(0, 0, 0, 0.10);
 cursor: pointer;
 transition-property: background-color, border;
 transition-duration: 250ms;
-transition-timing-function: calc(0.4, 0, 0.2, 1);
+transition-timing-function: calc-bezier(0.4, 0, 0.2, 1);
 
 }
 
