--- a/css/styles.css
+++ b/css/styles.css
@@ -705,6 +705,7 @@ transition-timing-function: calc-bezier(0.4, 0, 0.2, 1);
 .button-close-modal:focus{
     background-color: var(--color-ocean);
     border: none;
+    fill: var(--color-white);
 }
 
 .icon-close:hover,
