--- a/css/styles.css
+++ b/css/styles.css
@@ -697,8 +697,8 @@ background-color: var(--color-cornflower);
 border: 1px solid rgba(0, 0, 0, 0.10);
 cursor: pointer;
 transition-property: background-color, border;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 transition-duration: 250ms;
-transition-timing-function: calc-bezier(0.4, 0, 0.2, 1);
 
 }
 
