--- a/css/styles.css
+++ b/css/styles.css
@@ -569,13 +569,14 @@ gap: 40px;
 
 .image-class-link{
     display: block;
-    transition-property: box-shadow;
+    transition-property: box-shadow color background-color border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-class-link:hover,
 .image-class-link:focus{
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+transform: translateY(0%);
 }
 
 .porfolio-list{
