--- a/css/styles.css
+++ b/css/styles.css
@@ -608,24 +608,23 @@ transform: translateY(0%);
 }
 
 .wrapper-text{
+    position: absolute;
     color: var(--color-cloud);
     padding: 40px 32px;
-
-}
-
-.image-wrapper p {
-    
-    position: absolute;
-    inset: 0;
+    top: 0;
     background-color: var(--color-iris);
-    opacity: 0;
-    translate: 0 100%;
-    transition-property: translate, opacity;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition-property: transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.image-wrapper:hover p{
+
+
+.wrapper-text:hover{
 translate: 0;
 opacity: 1;
 }
