--- a/css/styles.css
+++ b/css/styles.css
@@ -499,7 +499,7 @@ margin-right: 120px;
     padding: 12px 24px;
     border-radius: 4px;
     border: 1px solid var(--color-cornflower);
-    transition-property: box-shadow color background-color border-color;
+    transition-property: box-shadow, color, background-color, border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -622,12 +622,12 @@ transform: translateY(0%);
 
 }
 
-
-
-.wrapper-text:hover{
-
-
+.image-class-link:hover,
+.image-class-link:focus{
+    transform: translateY(0%);
 }
+
+
 
 .modal-window{
     position: fixed;
