--- a/css/styles.css
+++ b/css/styles.css
@@ -607,26 +607,27 @@ transform: translateY(0%);
     overflow: hidden;
 }
 
-.wrapper-text{
+.image-wrapper p{
     position: absolute;
     color: var(--color-cloud);
     padding: 40px 32px;
-    top: 0;
+    inset: 0;
     background-color: var(--color-iris);
     height: 100%;
     width: 100%;
-    transform: translateY(100%);
-    transition-property: transform;
+    translate: 0 100%;
+    opacity: 0;
+    transition-property: translate, opacity;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.image-class-link:hover,
-.image-class-link:focus{
-    transform: translateY(0%);
-}
 
+.image-wrapper:hover p{
+    opacity: 1;
+    translate: 0;
+}
 
 
 .modal-window{
