--- a/css/styles.css
+++ b/css/styles.css
@@ -577,7 +577,7 @@ gap: 40px;
 .image-class-link:hover,
 .image-class-link:focus{
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-transform: translateY(0%);
+
 }
 
 .porfolio-list{
@@ -607,33 +607,26 @@ transform: translateY(0%);
     overflow: hidden;
 }
 
-.image-wrapper p{
-    position: absolute;
-    color: var(--color-cloud);
-    padding: 40px 32px;
-    inset: 0;
-    background-color: var(--color-iris);
-    height: 100%;
-    width: 100%;
-    translate: 0 100%;
-    opacity: 0;
-    transition-property: translate, opacity;
+.wrapper-text{
+position: absolute;
+top:0;
+color: var(--color-cloud);
+background-color: var(--color-iris);
+padding: 40px 32px;
+width: 100%;
+height: 100%;
+transform: translateY(100%);
+    transition-property: transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 
-.image-wrapper:hover p{
-    opacity: 1;
-    translate: 0;
+.image-class-link:hover .wrapper-text{
+    transform: translateY(0%);
 }
 
-.image-class-link:hover,
-.image-class-link:focus
-{
-transform: translateY(0%);
-}
+
 
 
 .modal-window{
