--- a/css/styles.css
+++ b/css/styles.css
@@ -622,11 +622,14 @@ transform: translateY(100%);
 }
 
 
-.image-class-link:hover .wrapper-text,
-.image-class-link:focus .wrapper-text{
+.image-class-link:hover .wrapper-text
+{
     transform: translateY(0%);
 }
 
+.image-class-link:focus .wrapper-text{
+    transform: translateY(0%);
+}
 
 
 
