--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     background-image: linear-gradient(
     var(--GREY, rgba(46, 47, 66, 0.70)),
     var(--GREY, rgba(46, 47, 66, 0.70))),
-    url(/images/people-office.jpg);
+    url(https://github.com/kammil1/goit-markup-hw-05/blob/main/images/people-office.jpg?raw=true);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
